Edit and delete chat functionality. Moderator tools as welÃl
